# ncurses_Cellular_Automaton

./: .configure.sh.swp  .gitignore  LICENSE  README.md  build.sh  configure.sh  run.sh
docs/: Doxyfile  _automaton_8cpp.html  _automaton_8hpp.html  _brain_8cpp.html  _brain_8hpp.html  _display_8cpp.html  _display_8hpp.html  annotated.html  class_automaton-members.html  class_automaton.html  class_brain-members.html  class_brain.html  class_display-members.html  class_display.html  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  menudata.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
documentation/: Doxyfile
documentation/html/: _automaton_8cpp_source.html  _automaton_8hpp_source.html  _brain_8cpp_source.html  _brain_8hpp_source.html  _display_8cpp_source.html  _display_8hpp_source.html  annotated.html  class_brain.html  (+14 more)
source/: Automaton.cpp  Automaton.hpp  Brain.cpp  Brain.hpp  CMakeLists.txt  Display.cpp  Display.hpp  main.cpp
(+36 files in other folders)
